--- a/prebuilt/root/factory_init.rc
+++ b/prebuilt/root/factory_init.rc
@@ -7,8 +7,14 @@ on early-init
     write /proc/bootprof "INIT: usr/eng build setting"
 # create mountpoints
     mkdir /mnt 0775 root system
-    mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/sdcard2 0000 system system
+    mkdir /storage 0055 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    mkdir /storage/sdcard1 0000 system system
+    mkdir /mnt/cd-rom 0000 system system
+    # for backwards compatibility
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard1 /mnt/sdcard2
 
 on init
 
@@ -21,8 +27,11 @@ loglevel 3
     export LD_LIBRARY_PATH /vendor/lib:/system/lib
     export ANDROID_BOOTLOGO 1
     export ANDROID_ROOT /system
+    export ANDROID_ASSETS /system/app
     export ANDROID_DATA /data
-    export EXTERNAL_STORAGE /mnt/sdcard
+    export ANDROID_STORAGE /storage
+    
+    export ASEC_MOUNTPOINT /mnt/asec
     export LOOP_MOUNTPOINT /mnt/obb
 
 # Backward compatibility
@@ -66,33 +75,50 @@ service adbd /sbin/adbd
     write /proc/sys/kernel/sched_compat_yield 1
     write /proc/sys/kernel/sched_child_runs_first 0
 
-on fs
+# mount different fs start
+on fs_property:ro.mount.fs=YAFFS
 # mount mtd partitions
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
-    write /proc/bootprof "INIT:NAND:Mount_START"
+    write /proc/bootprof "INIT:NAND:Mount_START 6577"
     mount yaffs2 mtd@system /system
+    mkdir /system/secro 0600 system system
     mount yaffs2 mtd@system /system ro remount
     mount yaffs2 mtd@userdata /data nosuid nodev
+    # mount secro partition
+    mount yaffs2 mtd@secstatic /system/secro ro
     mount yaffs2 mtd@cache /cache nosuid nodev
-    write /proc/bootprof "INIT:NAND:Mount_END"
+    write /proc/bootprof "INIT:NAND:Mount_END 6577"
 
-# mount mtd partitions
-    # Mount /system rw first to give the filesystem a chance to save a checkpoint
+on fs_property:ro.mount.fs=EXT4
+    write /proc/bootprof "INIT:eMMC:Mount_START"
     exec /sbin/e2fsck -p /emmc@android
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
-    #mount ext4 emmc@android /system commit=1,data=journal,noauto_da_alloc
-    mount ext4 emmc@android /system commit=1,noauto_da_alloc
+    #mount ext4 emmc@android /system wait commit=1,data=journal,noauto_da_alloc
+    mount ext4 emmc@android /system wait commit=1,noauto_da_alloc
     mkdir /system/secro 0600 system system
-    mount ext4 emmc@android /system noatime ro remount 
+    mount ext4 emmc@android /system noatime ro remount wait
     exec /sbin/e2fsck -pfD /emmc@usrdata
     exec /sbin/tune2fs -O has_journal /emmc@usrdata
-    mount ext4 emmc@usrdata /data noatime nosuid nodev commit=1,nodelalloc,noauto_da_alloc	
+    exec /system/bin/ext4_resize
+    mount ext4 emmc@usrdata /data noatime nosuid nodev wait commit=1,nodelalloc,noauto_da_alloc	
+    mount ext4 /emmc@sec_ro /system/secro ro wait
     chown system system /system/data
     mkdir /system/cache 0770 system cache
     exec /sbin/e2fsck -p /emmc@cache
     exec /sbin/tune2fs -O has_journal /emmc@cache
-    mount ext4 emmc@cache /cache noatime nosuid nodev noauto_da_alloc
+    mount ext4 emmc@cache /cache noatime nosuid nodev wait noauto_da_alloc
+    write /proc/bootprof "INIT:eMMC:Mount_END"
 
+on fs_property:ro.mount.fs=UBIFS
+    write /proc/bootprof "INIT:NAND:Mount_START"
+    mount ubifs ubi@system /system
+    mkdir /system/secro 0600 system system
+    mount ubifs ubi@system /system ro remount
+    mount ubifs ubi@userdata /data nosuid nodev
+    mount ubifs ubi@cache /cache nosuid nodev
+    mount ubifs ubi@secstatic /system/secro ro
+    write /proc/bootprof "INIT:NAND:Mount_END"
+# mount different fs end
 on post-fs
     # once everything is setup, no need to modify /
     mount rootfs rootfs / ro remount
@@ -187,19 +213,22 @@ on post-fs
     insmod /system/lib/modules/mtk_stp_uart.ko
     insmod /system/lib/modules/mtk_stp_gps.ko
     insmod /system/lib/modules/mtk_stp_bt.ko
-    insmod /system/lib/modules/mt6620_fm_drv.ko
+    insmod /system/lib/modules/mtk_fm_drv.ko
     insmod /system/lib/modules/mtk_fm_priv.ko
+    insmod /system/lib/modules/mtk_wmt_wifi.ko
 
-    # Create char device file for WMT, GPS, BT, FM
+    # Create char device file for WMT, GPS, BT, FM, WIFI
     mknod /dev/stpwmt c 190 0;
     mknod /dev/stpgps c 191 0;
     mknod /dev/stpbt  c 192 0;
     mknod /dev/fm     c 193 0;
     chmod 0660 /dev/stpwmt
-	  chown system system /dev/stpwmt
+	chown system system /dev/stpwmt
+ 
+    mknod /dev/wmtWifi c 153 0
+    chmod 0666 /dev/wmtWifi
     # BT
     chmod 0660 /dev/stpbt
-    chown bluetooth radio /dev/stpbt
     # FM Radio device, FIXME: this is not a proper way to set permissions
     chmod 0666 /dev/fm
     # GPS
@@ -212,10 +241,6 @@ on post-fs
     mkdir /data/misc/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
-    chmod 0660 /sys/class/rfkill/rfkill1/state
-    chown wifi system /sys/class/rfkill/rfkill1/state
-    # Turn off wifi by default
-    write /sys/class/rfkill/rfkill1/state 0
 
     # Load WiFi Driver (factory mode application does the stuff)
     #insmod /system/lib/modules/wlan.ko
@@ -297,7 +322,8 @@ on post-fs
     # M4U
     insmod /system/lib/modules/m4u.ko
     mknod /dev/M4U_device c 188 0
-    chmod 0666 /dev/M4U_device
+    chmod 0444 /dev/M4U_device
+    chown system media /dev/M4U_device
     
     # Sensor
     chmod 0666 /dev/hwmsensor
@@ -321,7 +347,7 @@ on post-fs
     chown compass /sys/class/input/input3/offsets
 
     # GPIO
-    chmod 0666 /dev/mtgpio
+    chmod 0664 /dev/mtgpio
 
     	#dumchar 
 	chmod 0660 /dev/otp
@@ -338,13 +364,14 @@ on boot
 
 # Define RIL properties
     setprop rild.nw.operlist /system/etc/ril/oper.lis
-    # AGPS
-    chmod 0750 /system/bin/mtk_agpsd
-    chown gps system /system/bin/mtk_agpsd
+
+# AGPS
+    mkdir /data/agps_supl 0771 gps system
 
 # Start default class, this line is very important!!
    class_start default
    start sdcard
+   start installd
 
 ## Daemon processes to be run by init.
 ##
@@ -368,13 +395,8 @@ on property:ro.debuggable=1
     start console
 
 ## Custom service area (START)
+service AcdApiDaemon /system/bin/AcdApiDaemon
 # Please add custom service below
-
-service permission_check /system/bin/permission_check
-    user root
-    group nvram
-    oneshot
-
 service ccci_fsd /system/bin/ccci_fsd
     user ccci
     group  nvram ccci system
@@ -390,12 +412,30 @@ service nvram_daemon /system/bin/nvram_daemon
     group nvram
     oneshot
 
+
+service installd /system/bin/installd
+    class main
+    socket installd stream 600 system system
+
+service factory_no_image /system/bin/logwrapper /system/bin/factory
+    disable
+    oneshot
+
+service factory_with_image /system/bin/logwrapper /sbin/factory
+    disable
+    oneshot
+
 #
 # MT6620 related services (Begin)
 #
-service 6620_launcher /system/bin/6620_launcher 4000000 /system/etc/firmware/mt6620_patch_hdr.bin
+service 662x_launcher /system/bin/6620_launcher -b 4000000 -p /system/etc/firmware/ -d /dev/ttyMT2
     user system
 	group system
+    oneshot
+
+service wlanLoader /system/bin/wlan_loader
+    user root
+    group root
     oneshot
 
 service mdlogger /system/bin/mdlogger
@@ -416,6 +456,15 @@ service mdlogger /system/bin/mdlogger
 # MT6620 related services (End)
 #
 ## Custom service area (END)
+
+
+
+on property:sys.mtk.no.factoryimage=1
+    start factory_no_image
+
+on property:sys.mtk.no.factoryimage=0
+    start factory_with_image
+
 
 #mass_storage,adb,acm
 on property:sys.usb.com_config=0
@@ -440,6 +489,3 @@ on property:sys.usb.com_config=1
     write /sys/class/android_usb/android0/bDeviceClass 02
     write /sys/class/android_usb/android0/enable 1
     write /sys/devices/platform/mt_usb/cmode 1
-
-service factory /system/bin/logwrapper /system/bin/factory
-    oneshot
