--- a/prebuilt/root/init.rc
+++ b/prebuilt/root/init.rc
@@ -19,6 +19,7 @@ on early-init
     setcon u:r:init:s0
 
     start ueventd
+    import /init.b2g.rc
 
 # create mountpoints
     mkdir /mnt 0775 root system
